[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/LargeAura64.png" type="Texture" id=1]
[ext_resource path="res://assets/Fireflies.png" type="Texture" id=2]
[ext_resource path="res://actors/fireflies/FireFlies.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 40.05

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="FireFlies" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.376471, 0.752941, 0.290196, 1 )
frames = SubResource( 10 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 1 )
texture_scale = 1.2

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_FireFlies_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_FireFlies_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
